Use the model described Steen and Tanenbaum - time syncing message